--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -5,7 +5,8 @@
 
       <%= simple_form_for @cocktail do |f| %>
         <%= f.input :name %>
-        <%= f.button :submit, class: 'btn btn-primary' %>
+        <%= f.input :photo, as: :file %>
+        <%= f.button :submit, "Novo Drink", class: 'btn btn-primary' %>
       <% end %>
     </div>
   </div>
