--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,24 +1,23 @@
 <div class="container">
 
   <h1><%= @cocktail.name %></h1>
-  <%= link_to "Volte para os bons drinks", root_path %>
 
   <div class="row">
     <div class="col-sm-12 col-md-6">
-      <h3>Recipe</h3>
+      <h3>Receita</h3>
       <table class="table table-bordered">
         <tbody>
           <thead>
-            <th>Ingredient</th>
-            <th>Description</th>
-            <th>Action</th>
+            <th>Ingrediente</th>
+            <th>Descrição</th>
+            <th>Ação</th>
           </thead>
           <% @cocktail.doses.each do |dose| %>
             <tr>
               <td><%= dose.ingredient.name %></td>
               <td><%= dose.description %></td>
               <td>
-                <%= link_to dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } do %>
+                <%= link_to dose_path(dose), method: :delete, data: { confirm: "Tem certeza?" } do %>
                   <i class="fa fa-trash destroy_dose"></i>
                 <% end %>
               </td>
@@ -26,9 +25,11 @@
           <% end %>
         </tbody>
       </table>
+  <%= link_to "Volte para os bons drinks", root_path %>
     </div>
     <div class="col-sm-12 col-md-6">
       <%= render "doses/new", cocktail: @cocktail, dose: @dose %>
     </div>
   </div>
 </div>
+  <%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
