--- a/app/views/doses/_new.html.erb
+++ b/app/views/doses/_new.html.erb
@@ -1,6 +1,6 @@
 <h1>Insira sua dose</h1>
 <p><%= simple_form_for [@cocktail, @dose] do |f| %>
-  <%= f.input :description %>
-  <%= f.association :ingredient %>
-  <%= f.button :submit %>
+  <%= f.association :ingredient, label: "Ingrediente" %>
+  <%= f.input :description, label: "Descrição" %>
+  <%= f.button :submit, "Crie uma dose!" %>
 <% end %></p>
